deployment.yaml
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: cloud-app
# spec:
#   replicas: 1  # Start with 1 replica
#   selector:
#     matchLabels:
#       app: cloud-app
#   template:
#     metadata:
#       labels:
#         app: cloud-app
#     spec:
#       containers:
#         - name: cloud-app
#           image: aftenidaniela/cloud-app
#           imagePullPolicy: Always
#           ports:
#             - containerPort: 8080
#           resources:
#             requests:
#               cpu: "200m"   # 200 milliCPU
#               memory: "512Mi"
#             limits:
#               cpu: "500m"   # 500 milliCPU (max)
#               memory: "1Gi" # 1Gi max memory



apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-app
spec:
  replicas: 1  # ✅ Increased for zero downtime
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: cloud-app
  template:
    metadata:
      labels:
        app: cloud-app
    spec:
      imagePullSecrets:
        - name: regcred 
      containers:
        - name: cloud-app
          image: aftenidaniela/cloud-app  # ✅ Use the new image
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "200m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
